assets/css/style.css
/* ... */
.sidebar.open {
    width: 100%;
}

.menu-toggler {
    border-radius: calc(var(--toggler-line-size) / 2);
    display: block;
    width: var(--toggler-size);
    height: var(--toggler-size);
    position: fixed;
    top: var(--toggler-offset-top);
    right: 30px;
    cursor: pointer;
    z-index: 1000000;
    top: 25px;
}

.menu-toggler__line {
    height: var(--toggler-line-size);
    background: var(--toggler-color-hover);
    position: absolute;
    border-radius: calc(var(--toggler-line-size) / 2);
    left: 0;
    right: 0;
    transition: all 0.25s ease-out;
    border: 1px solid black;
}

.menu-toggler__line:nth-child(1) {
    top: calc(var(--toggler-line-size) * 1 + (var(--toggler-line-size) * (1 - 2)));
}

.menu-toggler__line:nth-child(2) {
    top: calc(var(--toggler-line-size) * 2 + (var(--toggler-line-size) * (2 - 2)));
}

.menu-toggler__line:nth-child(3) {
    top: calc(var(--toggler-line-size) * 3 + (var(--toggler-line-size) * (3 - 2)));
}

.input-toggler {
    position: absolute;
    left: -100%;
}


.input-toggler:checked~.menu-toggler .menu-toggler__line:not(:first-child):not(:last-child) {
    opacity: 0;
}

.input-toggler:checked~.menu-toggler .menu-toggler__line:first-child,
.input-toggler:checked~.menu-toggler .menu-toggler__line:last-child {
    background-color: var(--toggler-color-hover);
}

.input-toggler:checked~.menu-toggler .menu-toggler__line:first-child {
    transform: translateY(calc(var(--toggler-line-size) * (var(--toggler-line-number) - 1))) rotate(45deg);
}

.input-toggler:checked~.menu-toggler .menu-toggler__line:last-child {
    transform: translateY(calc(-1 * var(--toggler-line-size) * (var(--toggler-line-number) - 1))) rotate(-45deg);
}

.sb-link {
    display: flex;
    height: 50px;
    align-content: center;
    align-items: center;
    justify-content: center;
    text-decoration: none;
    color: #bb5555;
    transition: background 0.3s;
}

.sb-link:hover,
.sb-link:focus,
.sb-link:active {
    background: #f7f7f7;
}


/* intro */
.intro {
    height: 100vh;
    width: 100%;
    background-color: #71d2e1;
    position: absolute;
    top: 0;
    left: 0;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}

.intro-text {
    color: #f2e2e2;
    font-family: var(--text-2);
    text-align: center;
    margin: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.hide {
    background: #71d2e1;
    overflow: hidden;
}

.hide .text {
    display: inline-block;
    transform: translateY(-150%);
}

.hide .intro-img {
    transform: translateY(-100%);
}


/* hero */
.main-txt {
    font-family: var(--text-2);
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.main-txt p {
    font-size: 72px;
    text-transform: uppercase;
    line-height: 60px;
    position: relative;
    text-align: center;
    letter-spacing: 0;
}

.main-links {
    font-family: var(--text);
    font-size: 40px;
    position: relative;
    text-transform: uppercase;
    width: 100%;
    display: flex;
    align-items: center;
    font-family: var(--text-2);
    justify-content: center;
}

.main-links a {
    margin-right: 40px;
    font-family: 'Dokdo', cursive;
}

.logo {
    position: absolute;
    width: 180px;
    height: 180px;
    top: 0;
    border: 1px solid black;
}

.hero-img {
    position: absolute;
    height: 600px;
    right: 0;
    bottom: 0;
    z-index: 0;
    width: auto;
    filter: drop-shadow(2px 1px 25px #767373);
}

.hero-img-two {
    position: absolute;
    left: 0;
    top: 0;
    filter: drop-shadow(2px 1px 25px #767373);

}

.icon {
    position: absolute;
    bottom: 0;
    left: 0;
    height: 400px;
    width: 400px;
    filter: drop-shadow(2px 1px 25px #767373);
}

.soc-icons {
    position: absolute;
    z-index: 10000;
    display: flex;
    align-items: center;
    justify-content: center;
    right: 10%;
    top: 10px;
}

.soc-link {
    height: 200px;
    width: 200px;
}

.linkedin-link {
    animation: vibrate-1 1.2s linear infinite both;
}

.github-icon {
    animation: vibrate-1 1.3s linear infinite both;
}

/* skills */
#skills h2 {
    margin-top: 90px;
}

.skills-container {
    height: 700px;
    width: 1100px;
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
}


.snail {
    height: 600px;
    width: 600px;
    position: absolute;
    bottom: 0;
}

.s-snail {
    height: 400px;
    width: auto;
    position: absolute;
    bottom: 0;
}

.s-bulb {
    position: absolute;
    height: 150px;
    left: 117px;
    top: 71px;
    transform: rotate(346deg);
    filter: drop-shadow(0px 0px 10px #767373);
}

.s-lines {
    position: absolute;
    height: 101px;
    left: 12px;
    top: -28px;
    transform: rotate(341deg);
    filter: drop-shadow(0px 0px 10px #767373);
}

.skill-icon {
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
    padding: 10px;
    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
    position: absolute;
    background-color: #ffffff;
}

.css {
    height: 120px;
    width: 120px;
    top: 33%;
    -webkit-animation: vibrate-1 0.3s linear infinite both;
    animation: vibrate-1 0.3s linear infinite both;
    left: 50%;
}


.html {
    height: 120px;
    width: 120px;
    top: 10%;
    left: 25%;
    -webkit-animation: vibrate-1 0.5s linear infinite both;
    animation: vibrate-1 0.5s linear infinite both;
}

.github {
    height: 150px;
    width: 150px;
    bottom: 10%;
    right: 7%;
    -webkit-animation: vibrate-1 1s linear infinite both;
    animation: vibrate-1 1s linear infinite both;
}

.django {
    height: 185px;
    width: 185px;
    top: 25%;
    right: 10%;
    -webkit-animation: vibrate-1 .5s linear infinite both;
    animation: vibrate-1 .5s linear infinite both;
}
/* ... */

